package maidsafe_vault;

message VaultAccountSet {
  message VaultAccount {
    required bytes  pmid = 1;
    required uint64 offered = 2;
    required uint64 vault_used = 3;
    required uint64 account_used = 4;
    repeated bytes alerts = 5;
  }
  repeated VaultAccount vault_account = 1;
}

message ChunkInfoMap {
  message VaultChunkInfo {
    message WaitingListEntry{
      required bytes pmid = 1;
      required uint32 creation_time = 2;
      required bool storing_done = 3;
      required bool payments_done = 4;
      required int32 requested_payments = 5;
    }
    message WatchListEntry{
      required bytes pmid = 1;
      required bool can_delete = 2;
    }
    message ReferenceListEntry{
      required bytes pmid = 1;
      required uint32 last_seen = 2;
    }
    required bytes chunk_name = 1;
    repeated WaitingListEntry waiting_list_entry = 2;
    repeated WatchListEntry watch_list_entry = 3;
    repeated ReferenceListEntry reference_list_entry = 4;
    required uint64 watcher_count = 5;
    required uint64 watcher_checksum = 6;
    required uint64 chunk_size = 7;
  }
  repeated VaultChunkInfo vault_chunk_info = 1;
}